feat: implement BeneficiaryController